--- a/etl.ipynb
+++ b/etl.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=postgres password=root\")\n",
+    "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
     "cur = conn.cursor()"
    ]
   },
